fix(sdk): clean javadoc and boxed warnings
Reduce doclint noise in network and regex documentation, remove
deprecated boxed constructors from the JSON/SQLite/regex converter
paths, and update repository-owned copyright headers on the touched
SDK files. Also record the latest progress in the ExecPlan.